FIXED: Overflow

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,9 +1,10 @@
 .footerContainer {
-  display: grid;
-  place-content: center;
+  display: flex;
+  justify-content: center;
   padding: 1rem 0;
   background-color: #111;
   color: var(--clr-yellow-400);
+  overflow: hidden;
 }
 .footerContainer a {
   text-decoration: none;
